# librustzcash

./: AGENTS.md  Cargo.toml  LIBRUSTZCASH_AUDIT_FINDINGS.md  LIBRUSTZCASH_PCZT_AUDIT.md  fix_ci.py  repro_secp.rs  test_zeroize.rs
.github/workflows/: ci.yml
audits/: batch_verification_failure_isolation_audit.md  consensus_wallet_validation_gap_audit.md  cross_network_domain_confusion_audit.md  disclosure_strategy_and_signal_draft.md  group_element_subgroup_audit.md  local_wallet_composed_poc_plan.md  local_wallet_composed_state_corruption_chain_audit.md  local_wallet_private_triage_report.md  note_consistency_recheck_audit.md  pczt_cryptographic_intent_binding_audit.md  reorg_witness_invalidation_audit.md  rseed_randomness_version_confusion_audit.md
audits/archived/: amount_overflow_signedness_confusion_audit.md  binding_signature_value_balance_audit.md  commitment_tree_position_binding_audit.md  consensus_branch_upgrade_activation_boundary_audit.md  (+18 more)
docs/: local_wallet_composed_state_corruption_chain.aux  local_wallet_composed_state_corruption_chain.out  local_wallet_composed_state_corruption_chain.tex  local_wallet_composed_state_corruption_chain.toc  pczt_semantic_recipient_mismatch.aux  pczt_semantic_recipient_mismatch.out  pczt_semantic_recipient_mismatch.tex  pczt_semantic_recipient_mismatch.toc  signal_disclosure_message.md
supply-chain/: config.toml
temp_ci/: Cargo.toml
zcash_client_backend/: CHANGELOG.md
zcash_client_memory/: Cargo.toml
zcash_client_sqlite/: CHANGELOG.md
zcash_keys/: CHANGELOG.md  Cargo.toml
zcash_transparent/: Cargo.toml
(+23 files in other folders)
