[package]
name = "temp_ci"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
zcash_keys = { version = "0.12.0", path = "../zcash_keys", default-features = false }

[lints]
workspace = true
